syntax = "proto3";

package upload.v1;

service UploadService {
  rpc StartUpload(stream UploadChunk) returns (UploadResult);
  rpc WatchUpload(UploadStatusRequest) returns (stream UploadStatus);
}

message UploadChunk {
  string upload_id = 1;
  bytes chunk = 2;
  int64 offset = 3;
  bool last = 4;
}

message UploadResult {
  string upload_id = 1;
  string status = 2;
  string message = 3;
}

message UploadStatusRequest {
  string upload_id = 1;
}

message UploadStatus {
  string upload_id = 1;
  string status = 2;
  int32 progress = 3;
  string message = 4;
}
