syntax = "proto3";

package user;

message Empty {}

message UserByIdRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 limit = 1;
}

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string avatar_url = 4;
  string job_title = 5;
  string created_at = 6;
  string updated_at = 7;
  map<string, string> metadata = 8;
}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc GetUserById (UserByIdRequest) returns (User);
  rpc ListUsers (ListUsersRequest) returns (UserList);
}

